--- a/zngur-generator/Cargo.toml
+++ b/zngur-generator/Cargo.toml
@@ -8,6 +8,9 @@ license.workspace = true
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[features]
+hotreload = []
+
 [dependencies]
 itertools = "0.11"
 zngur-parser = { version = "=0.4.0", path = "../zngur-parser" }
