--- a/zngur/Cargo.toml
+++ b/zngur/Cargo.toml
@@ -11,6 +11,12 @@ license.workspace = true
 [features]
 hotreload = ["zngur-generator/hotreload"]
 std-namespace-fix = ["zngur-generator/std-namespace-fix"]
+edition-2024 = ["zngur-generator/edition-2024"]
 
 [dependencies]
 zngur-generator = { version = "=0.4.0", path = "../zngur-generator" }
+syn = { version = "2.0.98", features = ["full", "extra-traits"] }
+proc-macro2 = "1.0.84"
+quote = "1.0.38"
+prettyplease = "0.2.29"
+heck = "0.5.0"
