--- a/zngur-def/Cargo.toml
+++ b/zngur-def/Cargo.toml
@@ -8,5 +8,8 @@ license.workspace = true
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[features]
+mut-guard = []
+
 [dependencies]
 itertools = "0.11"
